Fixed padding on index page on small devices

--- a/src/resources/css/specific/index.css
+++ b/src/resources/css/specific/index.css
@@ -30,7 +30,7 @@
 }
 
 .content .water, .content .dark {
-  padding: 2em;
+  padding: 2em 1em;
   font-weight: 500;
 }
 
@@ -44,7 +44,7 @@
 .content ul {
   list-style: none;
   padding-left: 1em;
-  margin-left: 1em;
+  margin-left: 0 !important;
   margin-bottom: 1em;
   font-weight: 500;
 }
